# authen-author-system

./: .dockerignore  .gitignore  Dockerfile  README.md  openapitools.json  package-lock.json  package.json
.github/workflows/: ping-backend.yml  ping-frontend.yml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/migrations/: 20240622183943_create_users_table.up.sql  20250624084714_initial_schema.sql
backend/src/: main.rs
backend/src/config/: config.rs
backend/src/db/: queries.rs
backend/src/middleware/: auth.rs
backend/src/models/: user.rs
backend/src/routes/: auth.rs  health.rs  mod.rs  profile.rs  protected.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: index.html  main.js  main.ts  style.css  style.scss  types.ts
frontend/src/components/: Profile.ts
ts-client/: .gitignore  api.ts  base.ts  client.ts  common.ts  configuration.ts  index.ts  package-lock.json  package.json  tsconfig.json
